fix model photo
