# docs/swagger.json
@@ -222,14 +222,9 @@
                 }
             }
         },
-        "/photos": {
+        "/photo": {
             "get": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
-                "description": "Get all photos with authentication user",
+                "description": "Get all photos",
                 "consumes": [
                     "application/json"
                 ],
@@ -237,14 +232,14 @@
                     "application/json"
                 ],
                 "tags": [
-                    "photos"
+                    "photo"
                 ],
-                "summary": "Fetch all photos",
+                "summary": "Get all photos",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.ResponseDataFetchedPhoto"
+                            "$ref": "#/definitions/domain.ResponseGetAllPhotos"
                         }
                     },
                     "400": {
@@ -275,7 +270,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "photos"
+                    "photo"
                 ],
                 "summary": "Store a photo",
                 "parameters": [
@@ -285,7 +280,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.AddPhoto"
+                            "$ref": "#/definitions/domain.AddPhoto"
                         }
                     }
                 ],
@@ -293,7 +288,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/model.ResponseDataAddedPhoto"
+                            "$ref": "#/definitions/domain.ResponseAddedPhoto"
                         }
                     },
                     "400": {
@@ -311,7 +306,45 @@
                 }
             }
         },
-        "/photos/{id}": {
+        "/photo/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Get one photo with authentication user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "photo"
+                ],
+                "summary": "Get one photo",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ResponseGetByIdPhoto"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/helpers.ResponseMessage"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/helpers.ResponseMessage"
+                        }
+                    }
+                }
+            },
             "put": {
                 "security": [
                     {
@@ -326,7 +359,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "photos"
+                    "photo"
                 ],
                 "summary": "Update a photo",
                 "parameters": [
@@ -343,7 +376,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.UpdatePhoto"
+                            "$ref": "#/definitions/domain.UpdatePhoto"
                         }
                     }
                 ],
@@ -351,7 +384,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.ResponseDataUpdatedPhoto"
+                            "$ref": "#/definitions/domain.ResponseUpdatedPhoto"
                         }
                     },
                     "400": {
@@ -388,7 +421,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "photos"
+                    "photo"
                 ],
                 "summary": "Delete a photo",
                 "parameters": [
@@ -404,7 +437,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.ResponseMessageDeletedPhoto"
+                            "$ref": "#/definitions/domain.ResponseDeletedPhoto"
                         }
                     },
                     "400": {
@@ -829,6 +862,76 @@
         }
     },
     "definitions": {
+        "domain.AddPhoto": {
+            "type": "object",
+            "properties": {
+                "caption": {
+                    "type": "string",
+                    "example": "A caption"
+                },
+                "photo_url": {
+                    "type": "string",
+                    "example": "https://www.example.com/image.jpg"
+                },
+                "title": {
+                    "type": "string",
+                    "example": "A Photo Title"
+                }
+            }
+        },
+        "domain.AddedPhoto": {
+            "type": "object",
+            "properties": {
+                "caption": {
+                    "type": "string",
+                    "example": "A caption"
+                },
+                "created_at": {
+                    "type": "string",
+                    "example": "create time should be here"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "photo_url": {
+                    "type": "string",
+                    "example": "https://www.example.com/image.jpg"
+                },
+                "title": {
+                    "type": "string",
+                    "example": "A Photo Title"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.GetPhoto": {
+            "type": "object",
+            "properties": {
+                "caption": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "photo_url": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
         "domain.LoggedInUser": {
             "type": "object",
             "properties": {
@@ -893,6 +996,58 @@
                 }
             }
         },
+        "domain.ResponseAddedPhoto": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/domain.AddedPhoto"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "success"
+                }
+            }
+        },
+        "domain.ResponseDeletedPhoto": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "your account has been successfully deleted"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "success"
+                }
+            }
+        },
+        "domain.ResponseGetAllPhotos": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.GetPhoto"
+                    }
+                },
+                "status": {
+                    "type": "string",
+                    "example": "success"
+                }
+            }
+        },
+        "domain.ResponseGetByIdPhoto": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/domain.GetPhoto"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "success"
+                }
+            }
+        },
         "domain.ResponseLoggedInUser": {
             "type": "object",
             "properties": {
@@ -930,6 +1085,18 @@
                 }
             }
         },
+        "domain.ResponseUpdatedPhoto": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/domain.UpdatedPhoto"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "success"
+                }
+            }
+        },
         "domain.ResponseUpdatedUser": {
             "type": "object",
             "properties": {
@@ -939,6 +1106,26 @@
                 "status": {
                     "type": "string",
                     "example": "success"
+                }
+            }
+        },
+        "domain.UpdatePhoto": {
+            "type": "object",
+            "properties": {
+                "caption": {
+                    "type": "string",
+                    "example": "A new caption"
+                },
+                "photo_url": {
+                    "type": "string",
+                    "example": "https://www.example.com/new-image.jpg"
+                },
+                "title": {
+                    "type": "string",
+                    "example": "A new title"
+                },
+                "userID": {
+                    "type": "string"
                 }
             }
         },
@@ -959,12 +1146,39 @@
                 }
             }
         },
+        "domain.UpdatedPhoto": {
+            "type": "object",
+            "properties": {
+                "caption": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "photo_url": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
         "domain.UpdatedUser": {
             "type": "object",
             "properties": {
                 "age": {
                     "type": "integer",
                     "example": 8
+                },
+                "created_at": {
+                    "type": "string",
+                    "example": "create time should be here"
                 },
                 "email": {
                     "type": "string",
@@ -976,7 +1190,7 @@
                 },
                 "updated_at": {
                     "type": "string",
-                    "example": "the updated at generated here"
+                    "example": "update time should be here"
                 },
                 "username": {
                     "type": "string",
@@ -1005,23 +1219,6 @@
                 "photo_id": {
                     "type": "string",
                     "example": "photo-123"
-                }
-            }
-        },
-        "model.AddPhoto": {
-            "type": "object",
-            "properties": {
-                "caption": {
-                    "type": "string",
-                    "example": "A caption"
-                },
-                "photo_url": {
-                    "type": "string",
-                    "example": "https://www.example.com/image.jpg"
-                },
-                "title": {
-                    "type": "string",
-                    "example": "A Title"
                 }
             }
         },
@@ -1060,29 +1257,6 @@
                 "user_id": {
                     "type": "string",
                     "example": "here is the generated user id"
-                }
-            }
-        },
-        "model.AddedPhoto": {
-            "type": "object",
-            "properties": {
-                "caption": {
-                    "type": "string"
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "photo_url": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "string"
                 }
             }
         },
@@ -1140,35 +1314,6 @@
                 }
             }
         },
-        "model.FetchedPhoto": {
-            "type": "object",
-            "properties": {
-                "caption": {
-                    "type": "string"
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "photo_url": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "user": {
-                    "$ref": "#/definitions/src_modules_photo_model.User"
-                },
-                "user_id": {
-                    "type": "string"
-                }
-            }
-        },
         "model.Photo": {
             "type": "object",
             "properties": {
@@ -1194,18 +1339,6 @@
             "properties": {
                 "data": {
                     "$ref": "#/definitions/model.AddedComment"
-                },
-                "status": {
-                    "type": "string",
-                    "example": "success"
-                }
-            }
-        },
-        "model.ResponseDataAddedPhoto": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/model.AddedPhoto"
                 },
                 "status": {
                     "type": "string",
@@ -1240,21 +1373,6 @@
                 }
             }
         },
-        "model.ResponseDataFetchedPhoto": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.FetchedPhoto"
-                    }
-                },
-                "status": {
-                    "type": "string",
-                    "example": "success"
-                }
-            }
-        },
         "model.ResponseDataFetchedSocialMedia": {
             "type": "object",
             "properties": {
@@ -1272,18 +1390,6 @@
             "properties": {
                 "data": {
                     "$ref": "#/definitions/model.UpdatedComment"
-                },
-                "status": {
-                    "type": "string",
-                    "example": "success"
-                }
-            }
-        },
-        "model.ResponseDataUpdatedPhoto": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/model.UpdatedPhoto"
                 },
                 "status": {
                     "type": "string",
@@ -1309,19 +1415,6 @@
                 "message": {
                     "type": "string",
                     "example": "your comment has been successfully deleted"
-                },
-                "status": {
-                    "type": "string",
-                    "example": "success"
-                }
-            }
-        },
-        "model.ResponseMessageDeletedPhoto": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string",
-                    "example": "your photo has been successfully deleted"
                 },
                 "status": {
                     "type": "string",
@@ -1394,23 +1487,6 @@
                 }
             }
         },
-        "model.UpdatePhoto": {
-            "type": "object",
-            "properties": {
-                "caption": {
-                    "type": "string",
-                    "example": "A new caption"
-                },
-                "photo_url": {
-                    "type": "string",
-                    "example": "https://www.example.com/new-image.jpg"
-                },
-                "title": {
-                    "type": "string",
-                    "example": "A new title"
-                }
-            }
-        },
         "model.UpdateSocialMedia": {
             "type": "object",
             "properties": {
@@ -1425,29 +1501,6 @@
             }
         },
         "model.UpdatedComment": {
-            "type": "object",
-            "properties": {
-                "caption": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "photo_url": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "string"
-                }
-            }
-        },
-        "model.UpdatedPhoto": {
             "type": "object",
             "properties": {
                 "caption": {
@@ -1502,17 +1555,6 @@
                     "type": "string"
                 },
                 "id": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "src_modules_photo_model.User": {
-            "type": "object",
-            "properties": {
-                "email": {
                     "type": "string"
                 },
                 "username": {
